<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/base_bg"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/text_nomal_style"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/pad15"
            android:text="@string/order_number"
            />
        <EditText
            android:id="@+id/editOrder"
            style="@style/edit_normal_none_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pad52"
            android:gravity="right|center_vertical"
            android:hint="请输入订单号"
            android:paddingRight="@dimen/pad15"
            android:textColorHint="@color/text_light"
            android:textCursorDrawable="@null"
            android:visibility="visible" />
        />
    </LinearLayout>
    <TextView
        android:id="@+id/btnCommit"
        style="@style/btnCirlceRedStyle"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/pad15"
        android:layout_marginLeft="@dimen/pad15"
        android:layout_marginRight="@dimen/pad15"
        android:text="@string/btn_commit" />

    <TextView
        android:id="@+id/textGetOrderNumber"
        style="@style/text_nomal_style"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/pad15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_get_order_number" />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_below="@+id/title">
        <LinearLayout
            android:id="@+id/line_picture_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginLeft="@dimen/pad15"
            android:layout_marginRight="@dimen/pad15"
            android:layout_marginTop="@dimen/pad15"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/order" />

            <!--<ImageView-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:scaleType="fitXY"-->
                <!--android:adjustViewBounds="true"-->
                <!--android:src="@drawable/order2"/>-->
            <!--<ImageView-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:scaleType="fitXY"-->
                <!--android:adjustViewBounds="true"-->
            <!--android:src="@drawable/order3"/>-->
            <!--<ImageView-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:scaleType="fitXY"-->
                <!--android:adjustViewBounds="true"-->
                <!--android:src="@drawable/order4"/>-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>